<resources>
    <string name="app_name">HashLands</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="search_hint">Search</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="login">Login</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="dont_have_acount">Don\'t have an account?</string>
    <string name="already">Already have an account?</string>
    <string name="slide_1_title">Verify Land Ownership!</string>
    <string name="slide_1_desc">The easiest way to check who a land is for!</string>

    <string name="slide_2_title">Buy and Sell</string>
    <string name="slide_2_desc">Sell your lands without going through million procesess!</string>

    <string name="slide_3_title">Immutable Records</string>
    <string name="slide_3_desc">Records once set cannot be undone therefore securing your claim to your land anyday</string>

    <string name="slide_4_title">Blockchain</string>
    <string name="slide_4_desc">Every data is secured on the blockchain</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
